feat(fabric): add universal Bukkit and Fabric preview
- add native Fabric 1.21.11 claim protection and visualization
- share the flat-file claim graph and migration path across platforms
- preserve player and group claim-block balance data
- package Bukkit and Fabric in one verified universal jar
- stop clearing Citizens horse NPC equipment on interaction

Refs GriefPrevention/GriefPrevention#2623